# CS140-inheritance

./: CMakeLists.txt  Laborer.cpp  Laborer.h  Manager.cpp  Manager.h  README.md  Scientist.cpp  Scientist.h  Student.cpp  Student.h  counter.cpp  counter.h  distance.cpp  distance.h  main.cpp  testDistance.cpp  testEmployee.cpp
